fix loading spinner alignment

--- a/client/src/styles/DeckPage.css
+++ b/client/src/styles/DeckPage.css
@@ -4,7 +4,7 @@
   color: gray;
 }
 
-.content.loading {
+.deck-page.loading {
   height: 400px;
 }
 
